<resources>
    <string name="preference_file_key" translatable="false">asdkjbIGasdad123CTDchabsacTEc89iuHC87C</string>
    <string name="app_name" translatable="false">OpenSyncedLists</string>
    <string name="apply_changes">Accept changes</string>
    <string name="delete">Delete</string>
    <string name="menu_new_list">Create new list</string>
    <string name="menu_export">Export lists</string>
    <string name="menu_import">Import list/s</string>
    <string name="menu_settings">App settings</string>
    <string name="menu_list_settings">Settings of this list</string>
    <string name="menu_list_clear">Clear list</string>
    <string name="menu_check_all">Check all</string>
    <string name="menu_uncheck_all">Uncheck completed</string>
    <string name="menu_delete_checked">Delete all done</string>
    <string name="menu_toggle_all">Toggle all</string>
    <string name="menu_export_group">Export…</string>
    <string name="menu_export_share">Share as link</string>
    <string name="menu_export_share_md">Share as Markdown/Text</string>
    <string name="menu_export_list_json">Export list</string>
    <string name="menu_manual_sync">Synchronize</string>
    <string name="menu_about">About</string>
    <string name="edit_element_title">Edit element</string>
    <string name="edit_element_name">Name</string>
    <string name="edit_element_description">Description</string>
    <string name="title_checked_list">Checked elements:</string>
    <string name="eT_new_element">New element</string>
    <string name="list_element_isolator_tV">Checked elements:</string>
    <string name="share_before_name">Import the list \"</string>
    <string name="share_after_name">\" to OpenSyncedLists with the following Link: \n\n</string>
    <string name="share_after_link">\n\n Please open the link with the OpenSyncedLists app.</string>
    <string name="text_about">Created by Etienne Schmidt.<![CDATA[<br/><br/>]]>
        Webpage to this App <![CDATA[<a href="https://schmidt-systems.eu/docs/opensyncedlists">on Schmidt-Systems.eu</a><br/><br/>]]>Licensed under <![CDATA[<a href="https://gitlab.com/gladion136/opensyncedlists/-/raw/main/LICENSE">GNU GPL v3</a>]]></string>
    <string name="title_activity_settings">App settings</string>
    <string name="general_header">General</string>
    <string name="sync_header">Synchronization</string>
    <string name="design_mode_title">Theme</string>
    <string name="pref_design_system">System</string>
    <string name="pref_design_light">Light</string>
    <string name="pref_design_dark">Dark</string>
    <string name="pref_sync_interval">Sync interval</string>
    <string name="pref_sync_interval_summary">Sync interval in Seconds</string>
    <string name="jump_range_title">Jump range</string>
    <string name="jump_range_description">So far jumps the elements after clicked on the \"Up\"/\"Down\" Buttons.</string>
    <string name="sync_title">Automatic synchronization</string>
    <string name="default_server_title">Server hostname with protocol</string>
    <string name="list_settings_title">List settings</string>
    <string name="list_pref_sync_summary">List settings don\'t get synced</string>
    <string name="list_pref_check_option_title">Checkbox for each element</string>
    <string name="list_pref_name_title">List name</string>
    <string name="list_pref_server_name">Server hostname with protocoll</string>
    <string name="list_pref_sync_title">Automatic synchronization</string>
    <string name="list_pref_sync_on">Enabled</string>
    <string name="list_pref_sync_off">Disabled</string>
    <string name="list_pref_checked_list_title">List for checked elements</string>
    <string name="list_pref_checked_list_summary">Extra list for checked elements on bottom.</string>
    <string name="list_pref_invert_element_title">Buttons left</string>
    <string name="list_pref_invert_element_summary">Display the buttons left and the checkbox right</string>
    <string name="list_pref_delete_btn_title">Delete list</string>
    <string name="list_pref_delete_btn_summary">Warning! The list got only deleted local!</string>
    <string name="list_pref_remove_server_btn_title">Remove server from list</string>
    <string name="list_pref_remove_server_btn_summary">Deletes the list from the server only. The local list is kept and its server URL is removed.</string>
    <string name="confirm_remove_server_msg">Remove this list from the server? The local copy is kept and the server URL will be cleared.</string>
    <string name="server_removed">List removed from server. The local copy was kept.</string>
    <string name="server_removed_local_only">Server URL removed locally.</string>
    <string name="list_pref_delete_online_btn_title">Delete list online and local</string>
    <string name="list_pref_delete_online_btn_summary">Warning! The list will be deleted both local and online. If others devices has also access they could still upload it.</string>
    <string name="scroll_list_title">Automatic scrolling</string>
    <string name="scroll_list_summary">Scroll list after edit element</string>
    <string name="unexpected_error">Error: Something went wrong… Please try again.</string>
    <string name="no_connection">No connection to server!</string>
    <string name="no_app_for_intent_installed">No app installed for this action…</string>
    <string name="list_with_id_got_overridden">A list with the same id already exists and got overridden!</string>
    <string name="no_server_selected">No server selected!</string>
    <string name="cant_import_list">Can\'t import list!</string>
    <string name="not_found">Not found!</string>
    <string name="choose_file_to_import">Choose a file to import</string>
    <string name="create_list_title">Create list</string>
    <string name="create_list_msg">Enter a name:</string>
    <string name="create_list_yes">Create list</string>
    <string name="create_list_cancel">Cancel</string>
    <string name="no_name_entered">Please enter a name first.</string>
    <string name="cant_import_file">Can\'t import file!</string>
    <string name="text_about_others">Icons made by <![CDATA[<div><a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>]]> got used and changed.</string>
    <string name="menu_open_in_playstore">Open in PlayStore</string>
    <string name="menu_contact_developer">Contact the developer</string>
    <string name="menu_open_webpage">Open Webpage</string>
    <string name="menu_show_source">Show Source Code</string>
    <string name="dev_mail_address" translatable="false">eschmidt@schmidt-ti.eu</string>
    <string name="dev_mail_subject" translatable="false">OpenSyncedLists: </string>
    <string name="app_webpage" translatable="false">https://schmidt-systems.eu/docs/opensyncedlists</string>
    <string name="sourcecode_webpage" translatable="false">https://gitlab.com/gladion136/opensyncedlists</string>
    <string name="defaults_list">Default list settings</string>
    <string name="defaults_list_summary">Applied to new lists; can also overwrite all existing lists</string>
    <string name="defaults_list_hint">These values are used for new lists. When you change one, you can choose to also apply it to all existing lists.</string>
    <string name="settings_screen_data">Data / Storage</string>
    <string name="settings_screen_data_summary">Reset lists, settings or everything</string>
    <string name="data_screen_hint">Reset stored data. These actions cannot be undone.</string>
    <string name="data_category_lists">Lists</string>
    <string name="data_category_settings">Settings</string>
    <string name="data_category_everything">Everything</string>
    <string name="data_reset_lists_title">Reset all lists</string>
    <string name="data_reset_lists_summary">Delete all lists from this device. App settings are kept.</string>
    <string name="data_reset_lists_confirm">Delete all %d lists from this device?</string>
    <string name="data_reset_lists_done">All lists deleted.</string>
    <string name="data_delete_server_lists_title">Delete all lists on server</string>
    <string name="data_delete_server_lists_summary">Delete the server copies of all lists and remove their server URL. Local lists are kept.</string>
    <string name="data_delete_server_lists_confirm">Delete the server copies of all lists? Local lists are kept.</string>
    <string name="data_delete_server_lists_done">Processed %d lists with a server.</string>
    <string name="data_reset_settings_title">Reset all settings</string>
    <string name="data_reset_settings_summary">Restore all app settings to their defaults. Lists are kept.</string>
    <string name="data_reset_settings_confirm">Reset all app settings to their defaults?</string>
    <string name="data_reset_settings_done">Settings reset.</string>
    <string name="data_reset_everything_title">Reset everything</string>
    <string name="data_reset_everything_summary">Delete all data (lists, settings, files) and restart the app, like \"Clear data\".</string>
    <string name="data_reset_everything_confirm">Delete ALL app data and restart? This cannot be undone.</string>
    <string name="list_pref_jump_buttons_title">Jump Buttons</string>
    <string name="list_pref_jump_buttons_summary">Display jump buttons, set range in global settings</string>
    <string name="menu_import_url">Import list per link</string>
    <string name="import_list_url_title">Import list</string>
    <string name="import_list_url_msg">Import a list via link.</string>
    <string name="import_list_url_yes">Ok</string>
    <string name="search">Search</string>
    <string name="pref_list_overview_instead_cards_summary">Display all lists inside a list view instead of a grid of cards</string>
    <string name="pref_list_overview_instead_cards_title">List overview as list instead of cards</string>
    <string name="menu_import_text">Import text list</string>
    <string name="settings_screen_design">Design</string>
    <string name="settings_screen_design_summary">Theme, list overview, font size and button size</string>
    <string name="settings_screen_interactions">Interactions</string>
    <string name="settings_screen_interactions_summary">Jump range and list scrolling</string>
    <string name="settings_screen_sync">Sync settings</string>
    <string name="settings_screen_sync_summary">Synchronization interval</string>
    <string name="app_settings_scope_hint">These settings apply to the whole app. To change settings for a single list, open that list and go to its settings.</string>
    <string name="list_settings_scope_hint">These settings apply only to this list. App-wide settings are in the app settings.</string>
    <string name="sync_hints_category">Related</string>
    <string name="sync_hint_defaults_title">Default values for new lists</string>
    <string name="sync_hint_defaults_summary">Change defaults and optionally apply them to all existing lists.</string>
    <string name="sync_hint_data_title">Data / Storage</string>
    <string name="sync_hint_data_summary">Delete lists from their servers and reset data.</string>
    <string name="settings_screen_defaults">Default values for new lists</string>
    <string name="list_settings_screen_design">Design</string>
    <string name="list_settings_screen_design_summary">Display options for this list</string>
    <string name="list_settings_screen_sync">Synchronization</string>
    <string name="list_settings_screen_sync_summary">Host URL, auto sync, remove server</string>
    <string name="list_settings_screen_deletion">Deletion</string>
    <string name="list_settings_screen_deletion_summary">Delete this list</string>
    <string name="pref_font_size_title">Font size</string>
    <string name="pref_font_size_summary">Size of list element text. In overview mode smaller text makes elements more compact.</string>
</resources>