<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@android:drawable/ic_dialog_info"
        android:key="app_settings_scope_hint"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/app_settings_scope_hint" />

    <PreferenceScreen
        android:key="screen_design"
        android:summary="@string/settings_screen_design_summary"
        android:title="@string/settings_screen_design">

        <ListPreference
            android:defaultValue="@string/pref_design_system"
            android:entries="@array/pref_design"
            android:entryValues="@array/pref_design"
            android:key="design"
            android:title="@string/design_mode_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="list_overview_instead_cards"
            android:summary="@string/pref_list_overview_instead_cards_summary"
            android:title="@string/pref_list_overview_instead_cards_title" />

        <ListPreference
            android:defaultValue="1.0"
            android:entries="@array/pref_font_size_entries"
            android:entryValues="@array/pref_font_size_values"
            android:key="font_size"
            android:summary="@string/pref_font_size_summary"
            android:title="@string/pref_font_size_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_interactions"
        android:summary="@string/settings_screen_interactions_summary"
        android:title="@string/settings_screen_interactions">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_jump_range"
            android:entryValues="@array/pref_jump_range"
            android:key="jump_range"
            android:summary="@string/jump_range_description"
            android:title="@string/jump_range_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="scrollList"
            android:summary="@string/scroll_list_summary"
            android:title="@string/scroll_list_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_sync"
        android:summary="@string/settings_screen_sync_summary"
        android:title="@string/settings_screen_sync">

        <ListPreference
            android:defaultValue="5"
            android:entries="@array/pref_sync_interval"
            android:entryValues="@array/pref_sync_interval"
            android:key="sync_interval"
            android:summary="@string/pref_sync_interval_summary"
            android:title="@string/pref_sync_interval" />

        <PreferenceCategory android:title="@string/sync_hints_category">

            <Preference
                android:icon="@android:drawable/ic_menu_info_details"
                android:key="sync_hint_defaults"
                android:persistent="false"
                android:summary="@string/sync_hint_defaults_summary"
                android:title="@string/sync_hint_defaults_title" />

            <Preference
                android:icon="@android:drawable/ic_menu_info_details"
                android:key="sync_hint_data"
                android:persistent="false"
                android:summary="@string/sync_hint_data_summary"
                android:title="@string/sync_hint_data_title" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_defaults"
        android:summary="@string/defaults_list_summary"
        android:title="@string/settings_screen_defaults">

        <Preference
            android:icon="@android:drawable/ic_dialog_info"
            android:key="defaults_info"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/defaults_list_hint" />

        <PreferenceCategory android:title="@string/settings_screen_design">

            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="check_option"
                android:title="@string/list_pref_check_option_title" />

            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:dependency="check_option"
                android:key="checked_list"
                android:summary="@string/list_pref_checked_list_summary"
                android:title="@string/list_pref_checked_list_title" />

            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="jump_buttons"
                android:summary="@string/list_pref_jump_buttons_summary"
                android:title="@string/list_pref_jump_buttons_title" />

            <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="invert_element"
                android:summary="@string/list_pref_invert_element_summary"
                android:title="@string/list_pref_invert_element_title" />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/list_settings_screen_sync">

            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="sync"
                android:title="@string/sync_title" />

            <EditTextPreference
                android:key="default_server"
                android:title="@string/default_server_title" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_data"
        android:summary="@string/settings_screen_data_summary"
        android:title="@string/settings_screen_data">

        <Preference
            android:icon="@android:drawable/ic_dialog_info"
            android:key="data_info"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/data_screen_hint" />

        <PreferenceCategory android:title="@string/data_category_lists">

            <Preference
                android:key="reset_lists_btn"
                android:summary="@string/data_reset_lists_summary"
                android:title="@string/data_reset_lists_title" />

            <Preference
                android:key="delete_server_lists_btn"
                android:summary="@string/data_delete_server_lists_summary"
                android:title="@string/data_delete_server_lists_title" />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/data_category_settings">

            <Preference
                android:key="reset_settings_btn"
                android:summary="@string/data_reset_settings_summary"
                android:title="@string/data_reset_settings_title" />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/data_category_everything">

            <Preference
                android:key="reset_everything_btn"
                android:summary="@string/data_reset_everything_summary"
                android:title="@string/data_reset_everything_title" />

        </PreferenceCategory>

    </PreferenceScreen>

</PreferenceScreen>
