<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="list_settings">


    <Preference
        android:icon="@drawable/ic_info"
        android:key="list_settings_scope_hint"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/list_settings_scope_hint" />

    <EditTextPreference
        android:key="list_name"
        android:persistent="false"
        android:title="@string/list_pref_name_title" />

    <PreferenceScreen
        android:key="list_screen_design"
        android:summary="@string/list_settings_screen_design_summary"
        android:title="@string/list_settings_screen_design">

        <SwitchPreferenceCompat
            android:key="check_option"
            android:persistent="false"
            android:title="@string/list_pref_check_option_title" />

        <SwitchPreferenceCompat
            android:dependency="check_option"
            android:key="checked_list"
            android:persistent="false"
            android:summary="@string/list_pref_checked_list_summary"
            android:title="@string/list_pref_checked_list_title" />

        <SwitchPreferenceCompat
            android:key="jump_buttons"
            android:persistent="false"
            android:summary="@string/list_pref_jump_buttons_summary"
            android:title="@string/list_pref_jump_buttons_title" />

        <SwitchPreferenceCompat
            android:key="invert_element"
            android:persistent="false"
            android:summary="@string/list_pref_invert_element_summary"
            android:title="@string/list_pref_invert_element_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="list_screen_sync"
        android:summary="@string/list_settings_screen_sync_summary"
        android:title="@string/list_settings_screen_sync">

        <Preference
            android:icon="@drawable/ic_info"
            android:key="sync_info"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/list_pref_sync_summary" />

        <SwitchPreferenceCompat
            android:key="auto_sync"
            android:persistent="false"
            android:summaryOff="@string/list_pref_sync_off"
            android:summaryOn="@string/list_pref_sync_on"
            android:title="@string/list_pref_sync_title" />

        <EditTextPreference
            android:key="server_name"
            android:persistent="false"
            android:title="@string/list_pref_server_name" />

        <Preference
            android:key="remove_server_btn"
            android:summary="@string/list_pref_remove_server_btn_summary"
            android:title="@string/list_pref_remove_server_btn_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="list_screen_deletion"
        android:summary="@string/list_settings_screen_deletion_summary"
        android:title="@string/list_settings_screen_deletion">

        <Preference
            android:key="delete_btn"
            android:summary="@string/list_pref_delete_btn_summary"
            android:title="@string/list_pref_delete_btn_title" />

        <Preference
            android:key="delete_online_btn"
            android:summary="@string/list_pref_delete_online_btn_summary"
            android:title="@string/list_pref_delete_online_btn_title" />

    </PreferenceScreen>


    <PreferenceCategory android:title="@string/sync_hints_category">

        <Preference
            android:key="default_settings_btn"
            android:icon="@drawable/ic_info"
            android:summary="@string/sync_hint_defaults_summary"
            android:title="@string/sync_hint_defaults_title" />


    </PreferenceCategory>


</PreferenceScreen>
