<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            app:entries="@array/pref_design"
            app:entryValues="@array/pref_design"
            app:defaultValue="@string/pref_design_system"
            app:key="design"
            app:title="@string/design_mode_title" />

        <ListPreference
            app:entries="@array/pref_jump_range"
            app:entryValues="@array/pref_jump_range"
            app:defaultValue="1"
            app:summary="@string/jump_range_description"
            app:key="jump_range"
            app:title="@string/jump_range_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <EditTextPreference
            app:key="default_server"
            app:title="@string/default_server_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>