<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- List creation -->
    <group android:id="@+id/group_create">
        <item
            android:id="@+id/new_list"
            android:title="@string/menu_new_list" />
        
    </group>

    <!-- Import / Export -->
    <group android:id="@+id/group_transfer">
        <item
            android:id="@+id/import_text"
            android:title="@string/menu_import_text" />
        <item
            android:id="@+id/import_lists"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/import_lists_url"
            android:title="@string/menu_import_url" />
        
    </group>

    <!-- App -->
    <group android:id="@+id/group_app">
        <item
            android:id="@+id/export_lists"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/about"
            android:title="@string/menu_about" />
    </group>

</menu>