<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2025  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_cat_lists"
        android:checkableBehavior="single">
        <item
            android:id="@+id/new_list"

            android:orderInCategory="0"
            android:title="@string/menu_new_list" />
        <item
            android:id="@+id/import_lists"

            android:orderInCategory="0"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/import_lists_url"

            android:orderInCategory="0"
            android:title="@string/menu_import_url" />
        <item
            android:id="@+id/export_lists"

            android:orderInCategory="0"
            android:title="@string/menu_export" />
    </group>

    <group
        android:id="@+id/menu_cat_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"

            android:orderInCategory="1"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/reviewOnPlayStore"

            android:orderInCategory="1"
            android:title="@string/menu_review_on_playstore" />
        <item
            android:id="@+id/about"

            android:orderInCategory="1"
            android:title="@string/menu_about" />
    </group>
</menu>