<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/openInPlayStore"
        android:title="@string/menu_open_in_playstore"/>
    <item
        android:id="@+id/contact_developer"
        android:title="@string/menu_contact_developer"/>
    <item
        android:id="@+id/openWebpage"
        android:title="@string/menu_open_webpage"/>
    <item
        android:id="@+id/showSourceCode"
        android:title="@string/menu_show_source"/>
    <item
        android:id="@+id/reviewOnPlayStore"
        android:title="@string/menu_review_on_playstore"/>
</menu>